Footer visibility bug fix

--- a/GoogleMeetUImobile/style.css
+++ b/GoogleMeetUImobile/style.css
@@ -96,15 +96,24 @@ h3 {
    background: #0b57d0;
 }
 
-#footer {
+footer {
+    position: relative;
+    bottom: 0;
+    margin: auto;
+    width: 100%;
+    max-width: 450px;
+    height: 45px;
+    background: #ddd;
+}
+
+#f-in {
+    width: 92%;
+    height: 100%;
+    margin: auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    height: 45px;
-    background: #ddd;
+    /* border: 1px solid */
 }
 
 #meet:hover {
